[package]
name = "llsd"
version = "0.1.0"
authors = ["John-Nagle <nagle@animats.com>"]
edition = "2018"
license = "LGPL-2.1 OR LGPL=3.0"
description = "Library for serializing and de-serializing data in Linden Lab Structured Data format. This format is used by Second Life and Open Simulator"

[dependencies]
anyhow = "1.0"
quick-xml = "0.22.0"
uuid = { version = "0.8.1", features = ["v4"] }
hex = "0.4.2"
base64 = "0.13.0"
ascii85 = "0.2.1"
chrono = "0.4"
